manual/v3.6.0/ja/html/_sources/filespecification/outputfiles_ja/DynamicalGreen_ja.rst.txt
.. highlight:: none

.. _Subsec:dynamicalG:

DynamicalGreen.dat
~~~~~~~~~~~~~~~~~~

動的グリーン関数の計算結果を出力します。ファイル名およびファイル形式は以下の通りです。

ファイル名
^^^^^^^^^^

-  ##\_DynamicalGreen.dat

##はModParaファイル内の[string02]で指定されるヘッダを表します。

ファイル形式
^^^^^^^^^^^^

-  1行目-:
   :math:`[`\ double01\ :math:`]`  :math:`[`\ double02\ :math:`]`  :math:`[`\ double03\ :math:`]`  :math:`[`\ double04\ :math:`]`

パラメータ
^^^^^^^^^^

-  :math:`[`\ double01\ :math:`]`, :math:`[`\ double02\ :math:`]`

   **形式 :** double型

   | **説明 :** 振動数の値を表します。
   | :math:`[`\ double01\ :math:`]`\ が実部、\ :math:`[`\ double02\ :math:`]`\ が虚部を表します。

-  :math:`[`\ double03\ :math:`]`, :math:`[`\ double04\ :math:`]`

   **形式 :** double型

   | **説明 :** 動的グリーン関数の値を表します。
   | :math:`[`\ double03\ :math:`]`\ が実部、\ :math:`[`\ double04\ :math:`]`\ が虚部を表します。

.. raw:: latex

   \newpage
